--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
     <title>Visite Maceio</title>
 </head>
 <body>
-    
+    <main>
+        <header>
+            <h1>Visite Alagoas</h1>
+            <h3>Conheça as cidades e praias mais procuradas do estado Alagoas</h3> 
+        </header>
+
+        <article>
+            <h2>Maceio - AL</h2>
+            <p>Nenhum dos 40 quilômetros de praias de Maceió consegue desapontar o visitante. São águas transparentes, <br>
+             com nuances que vão do verde clarinho ao azul turquesa, piscinas naturais, areias douradas e imensas manchas verdes, <br>
+             formadas ora por coqueirais, ora por fazendas de cana-de-açúcar. Os litorais Norte e Sul, repletos de cenários encantadores, <br>
+            garantem aos turistas passeios variados a uma pequena distância dos principais hotéis.</p>
+        </article>
+
+        <article>
+            <h2>Maragogi - AL</h2>
+            <p>O litoral nordestino tem várias cidades lindas e em Alagoas tem diferentes cidades praianas que são uma delícia para descansar. <br>
+                 Maragogi e redondezas fazem parte da chamada Costa dos Corais, uma área de proteção ambiental que se estende por cerca de 120 km <br> ao 
+                 longo da costa e abriga praias lindas, 
+                com águas mornas, coqueirais a perder de vista e muitas piscinas naturais graças aos recifes de corais.</p>
+        </article>
+
+        <article>
+            <h2>Japatinga - AL</h2>
+            <p>No coração da Costa dos Corais, bem do ladinho de Maragogi, Japaratinga é um paraíso natural quase inexplorado. 
+                <br> Praias paradisíacas, barreiras de corais, piscinas naturais e 
+            uma natureza exuberante são figuras comuns aqui em Japaratinga.</p>
+        </article>
+
+    </main>
 </body>
 </html>
