--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
         <article>
             <h2>Maceio - AL</h2>
+            <img src="img/Panorama_de_Maceió.jpg" alt="Cidade de Maceio">
             <p>Nenhum dos 40 quilômetros de praias de Maceió consegue desapontar o visitante. São águas transparentes, <br>
              com nuances que vão do verde clarinho ao azul turquesa, piscinas naturais, areias douradas e imensas manchas verdes, <br>
              formadas ora por coqueirais, ora por fazendas de cana-de-açúcar. Os litorais Norte e Sul, repletos de cenários encantadores, <br>
