--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
              formadas ora por coqueirais, ora por fazendas de cana-de-açúcar. Os litorais Norte e Sul, repletos de cenários encantadores, <br>
             garantem aos turistas passeios variados a uma pequena distância dos principais hotéis.</p>
 
-            <img src="img/Panorama_de_Maceió.jpg" width="400px" height="250px" alt="Cidade de Maceio">
+            <img class="centro" src="img/Panorama_de_Maceió.jpg" width="400px" height="250px" alt="Cidade de Maceio">
 
         </article>
 
@@ -32,7 +32,7 @@
                  longo da costa e abriga praias lindas, 
                 com águas mornas, coqueirais a perder de vista e muitas piscinas naturais graças aos recifes de corais.</p>
 
-                <img src="img/Galés_de_maragogi.jpg" width="400px" height="250px" alt="Gales de Maragogi">
+                <img class="centro" src="img/Galés_de_maragogi.jpg" width="400px" height="250px" alt="Gales de Maragogi">
 
         </article>
 
@@ -42,7 +42,7 @@
             <br> Praias paradisíacas, barreiras de corais, piscinas naturais e 
             uma natureza exuberante são figuras comuns aqui em Japaratinga.</p>
 
-            <img src="img/praia-dourada-arraial-dajuda.jpg" width="400px" height="250px" alt="Japaratinga">
+            <img class="centro" src="img/praia-dourada-arraial-dajuda.jpg" width="400px" height="250px" alt="Japaratinga">
             
         </article>
 
