--- a/maragogi.html
+++ b/maragogi.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Conheça Maragogi</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Assista ao video e conheça um pouco mais sobre Maragogi</h1>
+    <main>
+    <h2>Assista ao vídeo e conheça um pouco mais sobre Maragogi.</h2>
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/1dHIn-Sd598" title="YouTube video player" frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br>
 
-    <a href="index.html">Voltar</a> 
-
+    <button><a href="index.html">Voltar ao início</a></button> 
+    <button><a href="maceio.html">Maceió</a></button> 
+    <button><a href="japaratinga.html">Japaratinga</a></button>
+</main>
 </body>
 </html>
